k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:8.2-fpm  # Cambiado a imagen FPM
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: php-source
          mountPath: /var/www/html
      volumes:
      - name: php-source
        configMap:
          name: php-config
